# WCM

./: .dockerignore  .env.example  .gitignore  DISCUSSION.md  Dockerfile  Dockerfile.deepface.gpu  README.md  README_deepface.md  app_wrapper.py  assemble.py  compose.yaml  deepseek-ocr-compose.yml  docker-compose-deepface.yml  docker-compose.cuda.yaml  docker-compose.yaml  find_bad_images.py  fix_handlers.py  fix_handlers_loc.py  fix_handlers_v4.py  fix_handlers_v5.py  fix_vlm.py  libface_ljyr.xls  libface_lmgy.xls  libface_szmg.xls  main.py  multi_faces.txt  nginx.conf  persons.txt  pyproject.toml  remote-deepseek-ocr-compose.yml  scratch_remote_README.md  split_routes.py  split_script.py  ten.txt  test_api.py  test_deepface.py  test_docker.py  test_face.py  test_import.py  test_qwen_vision.py  (+7 more)
api/: __init__.py  handlers.py  main.py  routes.py  schemas.py  utils.py
docs/: ai_moderation_challenges.html  ai_moderation_challenges.md  backfill_persons.py  build.py  dataset_creation_standards.md  deepface_model_comparison.md  pdf.js  test-ui.js  test_register.py
scratch/triton_deploy/: Dockerfile  README.md  config.pbtxt  docker-compose.yml  model.py  triton_client.py
scripts/: batch_register.py  bulk_register.py  bulk_register_txt.py  extract_faces_from_directory.py  import_extracted_faces.py  import_sensitive_words.py  migrate_faces.py  test_refactored.py  test_remote_deepface.py  update_names_from_excel.py
src/wcm_facerec/: __init__.py  config.py  database.py  (+1 more)
webui/: .env.development  .env.production  index.html  package.json  pnpm-lock.yaml  vite.config.js
(+6 files in other folders)
